khweb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: khweb-deployment
spec:
  volumes:
  - name: khweb-log-volume
    hostPath:
      path: /var/log/khweb
  replicas: 4
  selector:
    matchLabels:
      app: khweb
  template:
    metadata:
      labels:
        app: khweb
    spec:
      containers:
      - name: khweb
        image: sillydevils/khweb-jenkins
        ports:
        - containerPort: 80
        volumeMounts:
        - name: khweb-log-volume
          mountPath: /var/log/test

---
apiVersion: v1
kind: Service
metadata:
  name: khweb-service
spec:
  selector:
    app: khweb
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
