ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: khweb-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    #kubernetes.io/ingress.class: "nginx"]
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
spec:
  ingressClassName: nginx
  rules:
    #- host: "www.powerranzo.com"
  - http:
      paths:
        - path: /(.*)
          pathType: Prefix
          backend:
            service:
              name: khweb-service
              port:
                number: 8080
